--- a/GarageManager/Web.config
+++ b/GarageManager/Web.config
@@ -19,6 +19,15 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+
+  <location path="Pages/ShoppingCart">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  
   <location path="Pages/Management">
     <system.web>
       <authorization>
@@ -27,6 +36,7 @@
       </authorization>
     </system.web>
   </location>
+  
   <connectionStrings>
     <add name="GarageDBEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=GarageDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="GarageDBConnectionString" connectionString="Data Source=LOCALHOST\SQLEXPRESS;Initial Catalog=GarageDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
